[package]
name = "babble_trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
burn = { version = "=0.21.0-pre.1", features = ["tui", "train", "cuda", "fusion"] }
burn-import = "=0.21.0-pre.1"
byteorder = "1.5.0"
env_logger = "0.11.9"
histogram_equalization = "0.2.4"
image = { version = "0.25.9", features = ["jpeg"], default-features = false }
log = "0.4.29"
pearson = "1.0.0"
rand = { version = "0.10.0", features = [] }

[profile.dev.package."*"]
opt-level = 3